--- a/ActivationFunctions/ActivationFunctions.ipynb
+++ b/ActivationFunctions/ActivationFunctions.ipynb
@@ -327,29 +327,29 @@
     {
       "cell_type": "code",
       "source": [
-        "#relu lacky\n",
-        "def relu_lacky(x):\n",
+        "#Leaky ReLU\n",
+        "def LeakyReLU(x):\n",
         "  return max(.1*x,x)"
       ],
       "metadata": {
         "id": "DiYEyANxvAph"
       },
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "relu_lacky(-100)"
+        "LeakyReLU(-100)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Xfn4SRBvNr_",
-        "outputId": "d5e8a271-443b-4d93-e5a3-1e3eddd70250"
+        "outputId": "3e525b90-10ff-4068-c93b-8b43a5921252"
       },
-      "execution_count": 29,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,23 +359,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 35
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "relu_lacky(1)"
+        "LeakyReLU(1)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9J_6wCYbvT2C",
-        "outputId": "843b3094-42e2-4e52-dfc0-fc5fc6c131ed"
+        "outputId": "49006058-b64f-4f02-92d1-d3da4d5c4360"
       },
-      "execution_count": 30,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 36
         }
       ]
     }
